Mon Jun 14 12:57:38 1999  David Mosberger  <davidm@hpl.hp.com>

        * combine.c (simplify_logical, case AND): Only call
        simplify_and_const_int if the mode is no wider than HOST_WIDE_INT
	or the constant is positive.

Mon Jun 14 11:43:41 1999  Nick Clifton  <nickc@cygnus.com>

	* configure.in: Fix typo in rs6000-ibm-aix4 case.
	* configure: Regenerate.

Mon Jun 14 03:55:40 1999  Jeffrey A Law  (law@cygnus.com)

	* configure.in (rs6000-ibm-aix4.3*, powerpc-ibm-aix4.3*): Do not
	require a sub-version #.
	* configure: Rebuilt.

1999-06-14  Robert Lipe  (robertlipe@usa.net)

	* svr4.h (DWARF2_DEBUGGING_INFO): Check for redefinition.

Mon Jun 14 10:30:52 BST 1999  Nathan Sidwell  <nathan@acm.org>

	* c-typeck.c (process_init_element): Detect excess elements in
	char array initializer.

1999-06-14  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* gcc.texi: Mention gcc 2.96 instead of egcs 1.00.

Sat Jun 12 22:29:48 EDT 1999  Jerry Quinn <jquinn@nortelnetworks.com>

	* invoke.texi (Option Summary): Add -fpermissive flag.

Sat Jun 12 03:40:42 1999  Jeffrey A Law  (law@cygnus.com)

	* sparc.h (LEGITIMIZE_RELOAD_ADDRESS): Do nothing with operands
	that require PIC code sequences.

Wed Jun  9 16:29:01 1999  Nick Clifton  <nickc@cygnus.com>

	* configure.in: Add new target: thumb-elf.
	* configure: Regenerate.
	* config/arm/t-thumb-elf: New file: Makefile fragment for
	thumb-elf build.
	* config/arm/telf.h: New file: Header file for thumb-elf
	build. 

Fri Jun 11 03:17:51 1999  Jeffrey A Law  (law@cygnus.com)

	* Makefile.in (libgcc2): Pass MAYBE_USE_COLLECT2 as an argument.
	* libgcc2.c (__CTOR_LIST, __DTOR_LIST); Do not provide
	initializers is some circumstances.

	* fixinc/inclhack.def (endif_label): Add additional selector for
	more bogus stuff after #endif statements.
	* fixinc/inclhack.sh, fixinc/fixincl.x: Rebuilt.

Thu Jun 10 20:44:36 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* i386/cygwin.h (SET_ASM_OP): Define.
